Add kubectl output support
