# pkg/types/cluster_resources.go
@@ -12,10 +12,15 @@ type ClusterResources struct {
 	Resources map[resid.ResId]map[ClusterID]*yaml.RNode
 }
 
-func (res *ClusterResources) All() iter.Seq2[resid.ResId, *yaml.RNode] {
+func (res *ClusterResources) All(cluster *ClusterID) iter.Seq2[resid.ResId, *yaml.RNode] {
 	return func(yield func(resid.ResId, *yaml.RNode) bool) {
 		for id, byCluster := range res.Resources {
-			for _, rnode := range byCluster {
+			for resClusterID, rnode := range byCluster {
+				// FIXME: inefficient filtering
+				if cluster != nil && resClusterID != *cluster {
+					continue
+				}
+
 				if !yield(id, rnode) {
 					return
 				}
